# ide

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.toml  .prettierrc.yaml  CHANGELOG.md  CURRENT_RELEASE_CHANGELOG.json  Cargo.toml  OUT_linux.txt  OUT_macos.txt  OUT_windows.txt  README.md  config.json  latest_release.txt  run  rust-toolchain  rustfmt.toml
.github/workflows/: build.yml  build2.yml  check.yml  gui-ci.yml  release.yml
app/: .gitignore  electron-builder.json  electron-webpack.json  package-lock.json  package.json  wasm_imports.js  webpack.common.js  webpack.config.js
app/src/: html_utils.js  http-server.js  index.html  index.js  loader.js  math.js  server.js  static_path.js  template.js  (+1 more)
app2/: package.json
build-utilities/: Cargo.toml
docs/: CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  README_TEMPLATE.md  connections.md  contributing.md  enso-protocol.md  repository-structure.md  shortcuts.md  specification.md  specs.md  style-guide.md  visualizations.md
examples/: index.html  index.js  package-lock.json  package.json  webpack.common.js
lib/core/fonts-base/: Cargo.toml  build.rs
lib/core/fonts-base/src/: lib.rs
lib/core/msdf-sys/: Cargo.toml  build.rs  msdfgen_wasm.js
lib/core/msdf-sys/src/: emscripten_data.rs  internal.rs  lib.rs  test_utils.rs
lib/ide/: Cargo.toml
lib/ide/ast/impl/: Cargo.toml
lib/ide/ast/impl/src/: assoc.rs  known.rs  lib.rs  opr.rs  prefix.rs  repr.rs
lib/ide/ast/macros/src/: lib.rs  repr.rs  token.rs
lib/ide/file-manager/mock-server/src/: main.rs
lib/ide/file-manager/src/: lib.rs
lib/ide/ide/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
lib/ide/ide/src/: controller.rs  controller_async.rs  controller_sync.rs  entry_point.rs  lib.rs  project_view.rs  text_editor.rs  view.rs  view_layout.rs  web_transport.rs
lib/ide/ide/src/todo/: executor.rs  mod.rs
lib/ide/ide/src/view/: project_view.rs  text_editor.rs  ui_component.rs  view_layout.rs
lib/ide/js/: notification.js
lib/ide/json-rpc/src/: handler.rs  lib.rs  messages.rs  transport.rs
lib/ide/json-rpc/src/test_util/transport/: mock.rs
lib/ide/json-rpc/src/transport/: web.rs
lib/ide/json-rpc/tests/: test.rs
lib/ide/macro-utils/: Cargo.toml
lib/ide/parser/: Cargo.toml  README.md  build.rs
lib/ide/parser/src/: api.rs  jsclient.rs  lib.rs  main.rs  wsclient.rs
lib/ide/parser/tests/: ast.rs  parsing.rs  web.rs
lib/ide/src/: controller.rs  double_representation.rs  entry_point.rs  executor.rs  graph_api.rs  lib.rs  view.rs
lib/ide/src/controller/: file.rs  graph.rs  module.rs  node.rs  notification.rs  project.rs  text.rs
lib/ide/src/controller/graph/: mock.rs
lib/ide/src/controller/node/: mock.rs
lib/ide/src/double_representation/: definition.rs  graph.rs
lib/ide/src/executor/: global.rs  test_utils.rs  web.rs
lib/ide/src/transport/: test_utils.rs  web.rs
lib/ide/src/view/: layout.rs  notification.rs  project.rs  project_view.rs  text_editor.rs  ui_component.rs  view_layout.rs
lib/ide/utils/src/: cell.rs  channel.rs  env.rs  handle.rs  lib.rs
lib/ide/webpack/: index.html  package-lock.json  webpack.config.js
lib/system/web/: Cargo.toml
lib/system/web/js/: intersection_observer.js  resize_observer.js
lib/system/web/src/: animation_frame_loop.rs  animationframeloop.rs  closure.rs  dom.rs  intersection_observer.rs  lib.rs  resize_observer.rs
lib/system/web/src/dom/: dom_container.rs
lib/system/web/src/keyboard_engine/: bindings.rs  callback_registry.rs  mod.rs
lib/system/web/tests/: keyboard_engine.rs
lib/web-test/: Cargo.toml
lib/web-test-proc-macro/: Cargo.toml
lib/web-test-proc-macro/src/: lib.rs
lib/web-test/src/: benchcontainer.rs  bencher.rs  container.rs  group.rs  lib.rs
run/: build  init
script/: assert_max_wasm_size.sh  build  build.py  build.sh  hello.rs  lint.sh  minimize_wasm.sh  test.sh  watch.sh
src/rust/ensogl/lib/text/: Cargo.toml
src/rust/ensogl/lib/text/embedded-fonts/: Cargo.toml  build.rs
src/rust/ensogl/lib/text/embedded-fonts/src/: lib.rs
src/rust/ensogl/lib/text/glsl/: glyph.glsl
src/rust/ensogl/lib/text/msdf-sys/: Cargo.toml  build.rs
src/rust/ensogl/lib/text/msdf-sys/src/: binding.rs  emscripten_data.rs  lib.rs
src/rust/ensogl/lib/text/src/: buffer.rs  component.rs  glyph.rs  lib.rs  model.rs  typeface.rs  view.rs
src/rust/ensogl/lib/text/src/buffer/: data.rs  location.rs  movement.rs  navigation.rs  selection.rs  slice.rs  style.rs  text.rs  view.rs
src/rust/ensogl/lib/text/src/buffer/data/: crdt.rs  range.rs  rope.rs  spans.rs  text.rs  unit.rs
src/rust/ensogl/lib/text/src/buffer/view/: movement.rs  selection.rs  word.rs
src/rust/ensogl/lib/text/src/component/: area.rs  line.rs  selection.rs
src/rust/ensogl/lib/text/src/model/: selection.rs
src/rust/ensogl/lib/text/src/typeface/: font.rs  glyph.rs  pen.rs
src/rust/ensogl/lib/text/src/typeface/font/: msdf.rs
src/rust/ensogl/lib/text/src/view/: glyph.rs
src/rust/ensogl/lib/text/src/view/glyph/: font.rs  pen.rs
src/rust/ide/engine-api/: Cargo.toml  build.rs
src/rust/ide/engine-api/src/: envelope_generated.rs  execution_context_generated.rs  generated.rs  lib.rs  session_generated.rs  util_generated.rs
src/rust/ide/lib/enso-protocol/: Cargo.toml  build.rs
src/rust/ide/lib/enso-protocol/src/: handler.rs  language_server.rs  lib.rs  project_manager.rs  types.rs
src/rust/ide/lib/enso-protocol/src/binary/: client.rs  connection.rs  message.rs  serialization.rs  uuid.rs
src/rust/ide/lib/enso-protocol/src/common/: error.rs  ongoing_calls.rs
src/rust/ide/lib/enso-protocol/src/language_server/: connection.rs  constants.rs  response.rs  tests.rs  types.rs
src/rust/ide/span-tree/: Cargo.toml
src/rust/ide/span-tree/src/: action.rs  action2.rs  builder.rs  generate.rs  iter.rs  lib.rs  node.rs  tree.rs
src/rust/ide/span-tree/src/generate/: macros.rs
src/rust/lib/graph/: Cargo.toml
src/rust/lib/graph/src/: component.rs  lib.rs  node.rs
src/rust/lib/graph/src/component/: cursor.rs  node.rs
src/rust/lib/graph/src/component/node/: port.rs
(+1467 files in other folders)
