[package]
name = "web-test-proc-macro"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2       = "1.0.1"
syn               = { version = "1.0.2", features = [ "full" ] }
quote             = "1.0"
wasm-bindgen-test = "0.2"
