[package]
name = "basegl-core-msdf-sys"
version = "0.1.0"
authors = ["Adam Obuchowicz <adam.obuchowicz@luna-lang.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.53"
js-sys = "0.3.30"
vector2d = "2.2.0"

[dev-dependencies]
slice_as_array = "1.1.0"
wasm-bindgen-test = "0.3.3"

[build-dependencies]
download-lp = "0.2.0"
failure = "0.1"