[package]
name    = "basegl-system-web"
version = "0.1.0"
authors = ["Enso Team <contact@luna-lang.org>"]
edition = "2018"

[lib]

[features]
default = ["console_error_panic_hook"]

[dependencies]
basegl-prelude = { version = "0.1.0"  , path = "../../prelude" }
js-sys         = { version = "0.3.28" }
wasm-bindgen   = { version = "^0.2"   , features = ["nightly"] }
failure        = { version = "0.1.5"  }
bigint         = { version = "4.4.1" }

console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Node',
  'Element',
  'HtmlElement',
  'HtmlCollection',
  'CssStyleDeclaration',
  'Event',
  'EventTarget',
  'KeyEvent',
  'KeyboardEvent',
  'KeyboardEventInit',
  'Node',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console',
  'Performance'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.4"
wasm-bindgen-futures = "0.4.4"
futures = "0.3.1"
