[package]
name    = "engine-api"
version = "0.1.0"
authors = ["Enso Team <contact@luna-lang.org>"]
edition = "2018"
build   = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
failure = "0.1.8"
flatbuffers = "0.5"
futures = "0.3.5"
ensogl-system-web        = { version = "0.1.0"  , path = "../../lib/system/web"    }
json-rpc      = { version = "0.1.0"  , path = "../json-rpc"            }
enso-protocol = { version = "0.1.0"  , path = "../enso-protocol"       }
enso-prelude  = { version = "0.1.0"  , path = "../../lib/prelude"      }
shapely       = { version = "0.1.0"  , path = "../../lib/shapely/impl" }
uuid          = { version  = "0.8.1", features = ["v4","wasm-bindgen"] }
utils         = { version = "0.1.0"  , path = "../utils"                }


[dev-dependencies]
wasm-bindgen-test = { version = "0.3.8" }

[build-dependencies]
ensogl-build-utilities = { version = "0.1.0"  , path = "../../build"  }
bytes                  = { version = "0.5.4"                          }
flatc-rust             = { version = "0.1.2"                          }
futures                = { version = "0.3.1"                          }
reqwest                = { version = "0.10.1"                         }
tokio                  = { version = "0.2.10" , features = ["macros"] }
zip                    = { version = "0.5.0"                          }
zip-extensions         = { version = "0.4.0"                          }
