[package]
name = "span-tree"
version = "0.1.0"
authors = ["Enso Team <contact@luna-lang.org>"]
edition = "2018"

[dependencies]
ast          = { version = "0.1.0", path = "../ast/impl"       }
data         = { version = "0.1.0", path = "../../lib/data"    }
enso-prelude = { version = "0.1.0", path = "../../lib/prelude" }
utils        = { version = "0.1.0", path = "../utils"          }

enumset      = { version = "0.4.5" }
