[package]
name = "enso-protocol"
version = "0.1.0"
authors = ["Enso Team <contact@enso.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
enso-data = { version = "0.2.0" }
enso-logger = { version = "0.3.0" }
enso-prelude = { version = "0.2.1" }
enso-shapely = { version = "0.2.0" }
json-rpc = { path = "../json-rpc" }
utils = { path = "../utils" }
chrono = { version = "0.4", features = ["serde"] }
failure = { version = "0.1.8" }
flatbuffers = { version = "2.0.0" }
futures = { version = "0.3.1" }
mockall = { version = "0.9.1", features = ["nightly"] }
hex = { version = "0.4.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = { version = "0.9.1" }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.8" }
ensogl-system-web = { path = "../../../lib/system/web" }

[build-dependencies]
ensogl-build-utilities = { path = "../../../build" }
bytes = { version = "1.0.1" }
flatc-rust = { version = "0.2.0" }
futures = { version = "0.3.1" }
reqwest = { version = "0.10.7" }
tokio = { version = "1.6.0", features = ["macros", "rt"] }
# Zip is needed because the build script downloads and extracts artifacts from the Engine.
zip = { version = "0.5.0" }
zip-extensions = { version = "0.6.0" }
